--- a/index.html
+++ b/index.html
@@ -453,47 +453,47 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label>Nome <span class="required-label-red">*</span></label>
-                                <input class="input-form-medium" type="text" placeholder="Primeiro nome">
+                                <input name="cadastro-usuario-name" class="input-form-medium" type="text" placeholder="Primeiro nome">
                             </div>
 
                             <div class="form-group">
                                 <label>Sobrenome</label>
-                                <input class="input-form-medium" type="text" placeholder="Sobrenome">
+                                <input name="cadastro-usuario-sobrenome" class="input-form-medium" type="text" placeholder="Sobrenome">
                             </div>
 
                             <div class="form-group">
                                 <label>CPF <span class="required-label-red">*</span></label>
-                                <input class="input-form-medium" type="text" placeholder="000.000.000-00">
+                                <input name="cadastro-usuario-cpf" class="input-form-medium" type="text" placeholder="000.000.000-00">
                             </div>
 
                             <div class="form-group">
                                 <label>Cargo  <span class="required-label-red">*</span></label>
-                                <input class="input-form-medium" type="text" placeholder="Ex: Diretor, Gerente...">
+                                <input name="cadastro-usuario-cargo" class="input-form-medium" type="text" placeholder="Ex: Diretor, Gerente...">
                             </div>
 
                             <div class="form-group">
                                 <label>Data de Nascimento  <span class="required-label-red">*</span></label>
-                                <input class="input-form-medium" type="text" placeholder="Ex: Diretor, Gerente...">
+                                <input name="cadastro-usuario-data-nascimento" class="input-form-medium" type="text" placeholder="Ex: Diretor, Gerente...">
                             </div>
 
                             <div class="form-group">
                                 <label>Gênero  <span class="required-label-red">*</span></label>
-                                <input class="input-form-medium" type="text" placeholder="Selecione">
+                                <input name="cadastro-usuario-genero" class="input-form-medium" type="text" placeholder="Selecione">
                             </div>
 
                             <div class="form-group">
                                 <label>Telefone  <span class="required-label-red">*</span></label>
-                                <input class="input-form-small" type="text" placeholder="(00) 00000-0000">
+                                <input name="cadastro-usuario-telefone" class="input-form-small" type="text" placeholder="(00) 00000-0000">
                             </div>
 
                             <div class="form-group">
                                 <label>Celular  <span class="required-label-red">*</span></label>
-                                <input class="input-form-small" type="text" placeholder="(00) 00000-0000">
+                                <input name="cadastro-usuario-celular" class="input-form-small" type="text" placeholder="(00) 00000-0000">
                             </div>
 
                             <div class="form-group">
                                 <label>Ramal  <span class="required-label-red">*</span></label>
-                                <input class="input-form-small" type="text" placeholder="0000">
+                                <input name="cadastro-usuario-ramal" class="input-form-small" type="text" placeholder="0000">
                             </div>
                         </div>                                
                     </form>
@@ -509,19 +509,19 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label>E-mail <span class="required-label-red">*</span></label>
-                                <input class="input-form-large" type="text" placeholder="usuario@email.com">
+                                <input name="cadastro-usuario-email" class="input-form-large" type="text" placeholder="usuario@email.com">
                                 <p style="font-size: 12px; text-align: left; margin-top: 5px;">Este e-mail será usado para recuperação de senha e notificações do sistema</p>
                             </div>
 
                             <div class="form-group">
                                 <label>Login (Username) <span class="required-label-red">*</span></label>
-                                <input class="input-form-large" type="text" placeholder="">
+                                <input name="cadastro-usuario-username" class="input-form-large" type="text" placeholder="">
                                 <p class="form-info">⚠️ Sem caracteres especiais (@, #, %, etc.) e deve ser diferente do e-mail</p>
                             </div>
 
                             <div class="form-group">
                                 <label>Senha <span class="required-label-red">*</span></label>
-                                <input class="input-form-medium" type="text" placeholder="">
+                                <input name="cadastro-usuario-senha" class="input-form-medium" type="text" placeholder="">
                             </div>
 
                             <div class="form-group">
